fixes alignment and colors in send success

--- a/app/components/Modals/SendModal/SendModal.scss
+++ b/app/components/Modals/SendModal/SendModal.scss
@@ -16,8 +16,8 @@
   margin-top: 30px;
 
   .icon {
-    width: 36px;
-    height: 36px;
+    width: 50px;
+    height: 50px;
     margin-right: 24px;
     path {
       fill: var(--panel-icon);
